[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
itertools = "0.8.2"
num_enum = "0.4.2"
bytecount = "0.6.0"
regex = "1.3.1"
lazy_static = "1.4.0"
num = "0.2.0"
rayon = "1.2.1"
string-interner = "0.7.1"
id-arena = "2.2.1"
