[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.8.2"
regex = "1.3.1"
lazy_static = "1.4.0"
rayon = "1.2.1"
enumflags2 = "0.7.2"

[dev-dependencies]
pretty_assertions = "1.0.0"
